<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_main">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/title_text_size"
        android:layout_marginBottom="24dp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_gravity="start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:text="@string/search"
            android:textColor="@color/text_on_button"
            app:backgroundTint="@color/button_background"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_tint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:text="@string/medialibrary"
            android:textColor="@color/text_on_button"
            app:backgroundTint="@color/button_background"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_tint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/text_on_button"
            app:backgroundTint="@color/button_background"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_tint" />
    </LinearLayout>

</LinearLayout>
